<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.17">
  <DUT Name="CommStates" Id="{dba6d817-64d4-42c7-8620-57275738c251}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE CommStates :
(
	Reset := 0,
	Idle := 1,
	Disabled := 2,
	Warning := 3,
	Start := 5,
	Busy := 6,
	Stop := 7,
	Error := 8
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>